<resources>
    <string name="app_name">Hind Polymers</string>
    <string-array name="navigation_drawer_items_array">
        <item>Hind Polymers</item>
        <item>Company</item>
        <item>Gallery</item>
        <item>User Corner</item>
        <item>About Us</item>
        <item>Contact Us</item>
    </string-array>
    <string-array name="gallery_images_array">
        <item>@drawable/gallery_hp_battery_cut_shrink_sleeve_2</item>
        <item>@drawable/gallery_hp_battery_grade_shrink_sleeve_1</item>
        <item>@drawable/gallery_hp_battery_grade_shrink_sleeve</item>
        <item>@drawable/gallery_hp_busbar_grade_shrink_sleeve</item>
        <item>@drawable/gallery_hp_busbar_grade_shrink_sleeve_1</item>
        <item>@drawable/gallery_hp_busbar_grade_shrink_sleeve_2</item>
        <item>@drawable/gallery_hp_capacitor_grade_shrink_sleeve</item>
        <item>@drawable/gallery_hp_capacitor_grade_shrink_sleeve_1</item>
        <item>@drawable/gallery_hp_capacitor_grade_shrink_sleeve_2</item>
        <item>@drawable/gallery_hp_cob_web_remover_handle_shrink_sleeve</item>
        <item>@drawable/gallery_hp_combo_pack_shrink_sleeve</item>
        <item>@drawable/gallery_hp_full_body_shrink_sleeve</item>
        <item>@drawable/gallery_hp_full_body_shrink_sleeve_1</item>
        <item>@drawable/gallery_hp_gas_valve_shrink_sleeves_1</item>
        <item>@drawable/gallery_hp_gas_valve_shrink_sleeves_2</item>
        <item>@drawable/gallery_hp_micro_fiber_mop_handle_shrink_sleeve</item>
        <item>@drawable/gallery_hp_capacitor_grade_shrink_sleeve</item>
        <item>@drawable/gallery_hp_capacitor_grade_shrink_sleeve_1</item>
        <item>@drawable/gallery_hp_capacitor_grade_shrink_sleeve_2</item>
        <item>@drawable/gallery_hp_micro_fiber_mop_handle_shrink_sleeve</item>
        <item>@drawable/gallery_hp_mop_handle_shrink_sleeve</item>
        <item>@drawable/gallery_hp_multipack_shrink_sleeve</item>
        <item>@drawable/gallery_hp_plunger_shrink_sleeve</item>
        <item>@drawable/gallery_hp_profile_cut_shrink_pouch</item>
        <item>@drawable/gallery_hp_profilecut_shrink_pouce_application</item>
        <item>@drawable/gallery_hp_promotional_pack_shrink_sleeve</item>
        <item>@drawable/gallery_hp_straight_cut_shrink_pouches</item>
        <item>@drawable/gallery_hp_tamper_evident_head_band</item>
        <item>@drawable/gallery_hp_tranperant_shrink_rolls</item>
        <item>@drawable/gallery_hp_transculent_shrink_rolls</item>
        <item>@drawable/gallery_hp_transperant_shrink_roll_application</item>
        <item>@drawable/gallery_hp_twist_mop_handle_shrink_sleeves</item>
        <item>@drawable/gallery_hp_wiper_rod_shrink_sleeve</item>
    </string-array>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="company">Company</string>
    <string name="gallery">Gallery</string>
    <string name="user_corner">User Corner</string>
    <string name="products">Products</string>
    <string name="send_message">Send Message</string>
    <string name="busbar">Busbar Sleeves</string>
    <string name="capacitor">Capacitor Sleeves</string>
    <string name="gas_valve">Gas Valve Sleeves</string>
    <string name="handle_rod">Handle Rod Sleeves</string>
    <string name="shrink_pouches">Shrink Pouches</string>
    <string name="shrink_rolls">Shrink Rolls</string>
    <string name="battery_sleeves">Battery Sleeves</string>
    <string name="tamper_evident">Tamper Evident Sleeves</string>
    <string name="product_catalogue">Product Catalogue</string>
    <string name="busbar_catalogue">Busbar Catalogue</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="app_name_with_index">Hind Polymers (%1$d/%2$d)</string>
    <string name="thankyou_message">Thank you for your message, we will get back to you soon</string>
    <string name="please_enter">Please enter all the information</string>
    <string name="busbar_desc">Hind Polymers busbar sleeves are free of Lead, Cadmium, Mercury, Hexavalent Chromium, Polybrominated biphenyl, Polybrominated diphenyl ethers and comply with Restriction of Hazardous Substances (RoHS) specifications as per RoHS2 Directive 2011/65/EU certified by Centre for Materials for Electronics Technology (C-MET).

Hind Polymers busbar shrink sleeves are flexible and flame retardant Polyvinyl Chloride tubing used for electrical insulation and offers excellent mechanical strength, chemical resistance and heat dissipation properties for control panel boards, switch-gears, distribution boards, etc. The busbar sleeves are designed for insulating copper, brass and aluminium busbars (rectangular, square and round). We supply busbar grade shrink sleeves in various sizes and different colors which not only helps in protecting the busbars but also for easy identification</string>
    <string name="capacitor_desc">Hind Polymers capacitor sleeves are free of Lead, Cadmium, Mercury, Hexavalent Chromium, Polybrominated biphenyl, Polybrominated diphenyl ethers and comply with Restriction of Hazardous Substances (RoHS) specifications as per RoHS2 Directive 2011/65/EU certified by Centre for Materials for Electronics Technology (C-MET).

Hind Polymers capacitor sleeves are used externally and offer excellent insulation and impact resistance. The sleeves are cost-effective and provide an attractive and clean appearance to the capacitors. We supply capacitor grade shrink sleeves in variety of colors, different sizes and are available in roll form as well as in singles.</string>
    <string name="gas_valve_desc">Gas valve heat shrink sleeves are used as tamper seal for cylinder valves. We manufacture gas valve heat shrink sleeve in a variety of colors (red, blue, yellow, green, black or any other custom color) in roll form for high-speed machine applications, singles / flat cut bands (clear and printed) for manual operations</string>
    <string name="handle_rod_desc">Hind Polymers handle rod shrink sleeves are used for covering handle rods / pipes / sticks of floor mops, wipers, twist mops, squeeze sponge mops, micro fibre mops, wooden broom sticks, rubber cup plungers, toilet plungers, drain plungers, cob web removers and are available in various sizes and colours</string>
    <string name="shrink_pouches_desc">Heat shrink pouches fit all shaped products and are optimal when the products are of standard and non standard dimensions.

Profile / dome / arc shape sealed shrink pouches fit products in all shapes and sizes. Profile cut shrink pouches are optimal when your products are of non standard dimensions.

Straight sealed heat shrink pouches fit products in all shapes and sizes and are optimal when the products are of square, rectangular, cuboid shape</string>
    <string name="shrink_rolls_desc">Heat shrink rolls are used as a packaging solution all around the world for high speed machine applications. We manufacture heat shrink sleeves (transparent, translucent) for everything from wrapping food products to bundling hardware making production more efficient and streamlined. We manufacture heat shrink sleeves in roll form for high speed machine applications, singles / flat cut bands (clear and printed) for manual operations</string>
    <string name="battery_sleeves_desc">Hind Polymers battery sleeves are free of Lead, Cadmium, Mercury, Hexavalent Chromium, Polybrominated biphenyl, Polybrominated diphenyl ethers and comply with Restriction of Hazardous Substances (RoHS) specifications as per RoHS2 Directive 2011/65/EU certified by Centre for Materials for Electronics Technology (C-MET).

Battery shrink sleeves / wraps are a low cost battery packing material made of PVC that offers excellent insulation and safety against leakages. Hind Polymers battery sleeves can be used internally for making the batteries leak-proof and tamper proof externally. Hind Polymers battery grade sleeves / wraps are available in wide range of colors with good insulation for single, twin and multiple battery packs</string>
    <string name="tamper_evident_desc">Hind Polymers tamper evident shrink sleeve help protect your customers, your brand and your reputation by providing a tight seal over the closure of a bottle or container to ensure the product is not tampered. We provide tamper evident shrink sleeve as neck bands, full body sleeves, Multi-pack/Combo-pack sleeves.</string>
    <string name="company_text">&lt;span style="color: #37b9d3;"&gt;&lt;strong&gt;&lt;big&gt;Hind Polymers-Manufacturer of Heat Shrink Sleeves&lt;/big&gt;&lt;/strong&gt;&lt;/span&gt;&lt;br/&gt; &lt;br /&gt;Over a period of 12 years Hind Polymers has established itself as the leading manufacturer of PVC heat shrink sleeves catering to Dairy, Food, Cosmetic, Pharmaceutical, Electrical, Fertilizer, Agro, Health and Wellness, Fan Blades, Candles, Cleaning and Hygiene, Gifts and Toys, Battery, Capacitor, LPG Gas, Oxygen, Nitrogen, Helium, Carbon Dioxide, Soda Cylinder Filling, Control Panel industries.&lt;br /&gt;&lt;br /&gt; Hind Polymers offers a comprehensive range of shrink sleeve products for a variety of packaging needs - heat shrink rolls (transparent, translucent, color), tamper evident shrink sleeves (full body shrink sleeves, tamper evident neck bands), multi-pack shrink sleeves (combo pack shrink sleeves, promotional pack shrink sleeves), shrink pouches (profile cut / dome / arc shrink pouches, straight cut shrink pouches), busbar grade shrink sleeves, capacitor grade shrink sleeves, battery grade sleeves, gas valve shrink sleeves, handle rod shrink sleeves (wiper rod shrink sleeves, mop handle shrink sleeves, plunger handle shrink sleeves, micro fibre mop rod shrink sleeves). We supply shrink sleeves (transparent, translucent, opaque, colored and printed) in roll form for high speed machine applications and singles for hand assembly.&lt;br /&gt;&lt;br /&gt; Hind Polymers primary focus is providing our customers with customised and quality shrink sleeve packaging solutions allowing for greater creative freedom and branding. We also provide assistance with the equipment / tools required for your shrink sleeve applications</string>
    <string name="address_text">HIND POLYMERS\n8-4-343/B/10/A, Vishwakarma Nagar,\nOpp. Meter Factory, Erragadda,\nHyderabad - 500018, INDIA</string>
    <string name="contactus_header_text">Get a free quote for your production needs / prototypes / samples by call or email</string>
    <string name="contacts">Nand Kishore Vukkalkar : +91 9866140095\nPraveenKumar Hebbare : +91 8792808582\nP.Y.Rao : +91 9986389898\nEmail : info.hindpolymers@gmail.com</string>
</resources>