<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@mipmap/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_company_fragment"
            android:icon="@mipmap/ic_logo_sqaure"
            android:title="@string/company" />
        <item
            android:id="@+id/nav_gallery_fragment"
            android:icon="@mipmap/ic_company"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_products_fragment"
            android:icon="@mipmap/ic_products"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_usercorner_fragment"
            android:icon="@mipmap/ic_usercorner"
            android:title="@string/user_corner" />
        <item
            android:id="@+id/nav_aboutus_fragment"
            android:icon="@mipmap/ic_aboutus"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_contactus_fragment"
            android:icon="@mipmap/ic_contactus"
            android:title="@string/contact_us" />
    </group>


</menu>