<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/hp_bg_3"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".ContactUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textSize="@dimen/textSizeHeader"
        android:textColor="@color/colorHeaderText"
        android:id="@+id/tv_contactus_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:text="@string/contactus_header_text"
        style="@style/TextviewStyle"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:elevation="16dp"
            card_view:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_contacts"
                    android:textSize="@dimen/textSizeNormal"
                    android:textColor="@color/colorNormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/contacts"
                    style="@style/TextviewStyle"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/iv_mapview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_map"
                        android:layout_weight="4"/>
                    <TextView
                        android:textSize="@dimen/textSizeNormal"
                        android:textColor="@color/colorNormalText"
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_weight="6"
                        android:text="@string/address_text"
                        style="@style/TextviewStyle"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>